// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartIcon component it renders properly when quantity = 0 1`] = `
<div
  className="relative"
>
  <svg
    fill="none"
    height="34"
    viewBox="0 0 38 34"
    width="34"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.01167 26.2134H23.2637L24.2063 22.5357H4.2741L0 5.86091H28.4804L29.9827 0H38V2.18315H31.7304L25.5486 26.3006C27.3481 26.6775 28.7015 28.2406 28.7015 30.1067C28.7015 32.2535 26.9108 34 24.7097 34C22.5086 34 20.718 32.2534 20.718 30.1067C20.718 29.4935 20.8646 28.9131 21.1247 28.3966H11.5967C11.8569 28.9131 12.0034 29.4935 12.0034 30.1067C12.0034 32.2535 10.2127 34 8.01167 34C5.81065 34 4.0199 32.2534 4.0199 30.1067C4.01997 27.96 5.81072 26.2134 8.01167 26.2134Z"
      fill="white"
    />
  </svg>
</div>
`;

exports[`CartIcon component it renders properly when quantity > 0 1`] = `
<div
  className="relative"
>
  <svg
    fill="none"
    height="34"
    viewBox="0 0 38 34"
    width="34"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.01167 26.2134H23.2637L24.2063 22.5357H4.2741L0 5.86091H28.4804L29.9827 0H38V2.18315H31.7304L25.5486 26.3006C27.3481 26.6775 28.7015 28.2406 28.7015 30.1067C28.7015 32.2535 26.9108 34 24.7097 34C22.5086 34 20.718 32.2534 20.718 30.1067C20.718 29.4935 20.8646 28.9131 21.1247 28.3966H11.5967C11.8569 28.9131 12.0034 29.4935 12.0034 30.1067C12.0034 32.2535 10.2127 34 8.01167 34C5.81065 34 4.0199 32.2534 4.0199 30.1067C4.01997 27.96 5.81072 26.2134 8.01167 26.2134Z"
      fill="white"
    />
  </svg>
  <div
    className="rounded-full h-4 w-4 bg-red-200 text-white flex items-center justify-center absolute bottom-0 right-0"
  >
    <p
      className="font-secondary font-normal text-white text-xs"
    >
      5
    </p>
  </div>
</div>
`;
